Popup, Icons und Eventlistener hinzugefügt

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -6,5 +6,6 @@
     --regular_hell_gelb: #fffaec;
     --regular_gelb: #f9fede;
     --regular_hell_gruen: #d7f8db;
-    --regular_gruen: #aadcb0;;
+    --regular_gruen: #aadcb0;
+    --regular_grey_transparent:#000000b7;
 }
