--- a/styles/style.css
+++ b/styles/style.css
@@ -33,12 +33,80 @@ p{
     padding-top: 20px;
     padding-bottom: 50px;
 }
+/* Design Popup */
+#popup_background{
+    background-color: var(--regular_grey_transparent);
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    z-index: 1;
+}
+
+#popup_background.visible {
+    visibility: visible;
+}
+
+#popup{
+    background-color: white;
+    top: 40%;
+    left: 25%;
+    position: absolute;
+    width: 50%;  
+    z-index: 1;
+    text-align: left;
+    padding: 30px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+    border-radius: 20px;
+}
+
+#pop_up_header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-bottom: 2px solid var(--regular_gruen);
+    gap: 10px;
+    margin-bottom: 30px;
+}
+
+#popup h2{
+    background-color: var(--text_white);
+    color: var(--text_grey);
+    font-size: 20px;
+    text-align: left;
+}
 
 #container_beschreibung_rezept{
     display: flex;
     flex-direction: column;
     justify-self: center;
     align-items: center;
+}
+#container_icon{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    gap: 10px;
+}
+
+#popup_allergene ul{
+    padding-left: 10px;
+
+}
+
+#popup_allergene li{
+    padding-bottom: 10px;
+
+}
+
+#icon_close{
+    margin-bottom: 8px;
+}
+
+.icon_size{
+    width: 30px;
 }
 
 #container_beschreibung{
